--- a/projects/CarbCounterPlusAngular/nbproject/project.properties
+++ b/projects/CarbCounterPlusAngular/nbproject/project.properties
@@ -1,3 +1,7 @@
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_configured=true
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
 file.reference.CarbCounterPlusAngular-app=app
 file.reference.CarbCounterPlusAngular-e2e-tests=e2e-tests
 file.reference.CarbCounterPlusAngular-test=test
