--- a/projects/CarbCounterPlusAngular/package.json
+++ b/projects/CarbCounterPlusAngular/package.json
@@ -7,8 +7,19 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.7",
+    "gulp-clean-css": "^3.0.4",
+    "gulp-include": "^2.3.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-livereload": "^3.8.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.5.0",
+    "gulp-watch": "^4.3.11",
     "http-server": "^0.9.0",
     "jasmine-core": "^2.4.1",
+    "jshint": "^2.9.4",
+    "jshint-stylish": "^2.2.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "^0.1.7",
