--- a/projects/CarbCounterPlusAngular/package.json
+++ b/projects/CarbCounterPlusAngular/package.json
@@ -7,11 +7,12 @@
   "license": "MIT",
   "devDependencies": {
     "bower": "^1.7.7",
-    "gulp-autoprefixer": "^4.0.0",
     "browserslist": [
-    ">1%",
-    "last 2 versions"
-  ],
+      ">1%",
+      "last 2 versions"
+    ],
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
     "gulp-clean-css": "^3.0.4",
     "gulp-include": "^2.3.1",
     "gulp-jshint": "^2.0.4",
